Fix the resizer issue with the jump value

--- a/src/style/reset.css
+++ b/src/style/reset.css
@@ -56,3 +56,7 @@ img {
 * {
     box-sizing: border-box;
 }
+
+* {
+    box-sizing: border-box;
+}
